Crash with OSL shader when checking results from getmessage trace "geom:name" #79819

Closed
opened 2020-08-16 07:12:30 +02:00 by Vitor Balbio · 10 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 970/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 451.67

Blender Version
Broken: version: 2.90.0 Beta, branch: master, commit date: 2020-08-14 20:34, hash: c300fc56c3cc
Worked: Blender 2.84.3 LTS

Short description of error
checking values retrieved from trace getmessage "geom:name" seems to cause crash in blender 2.90 and 2.91. It works with blender 2.83 LTS

Exact steps for others to reproduce the error
Open this blend file in LTS and set render in viewport - Works
Open this blend file in 2.90 and set render in viewport - Insta Crash

OSLBug.blend

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 970/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 451.67 **Blender Version** Broken: version: 2.90.0 Beta, branch: master, commit date: 2020-08-14 20:34, hash: `c300fc56c3cc` Worked: Blender 2.84.3 LTS **Short description of error** checking values retrieved from trace getmessage "geom:name" seems to cause crash in blender 2.90 and 2.91. It works with blender 2.83 LTS **Exact steps for others to reproduce the error** Open this blend file in LTS and set render in viewport - Works Open this blend file in 2.90 and set render in viewport - Insta Crash [OSLBug.blend](https://archive.blender.org/developer/F8785198/OSLBug.blend)
Author

Added subscriber: @vitorbalbio-3

Added subscriber: @vitorbalbio-3

#80019 was marked as duplicate of this issue

#80019 was marked as duplicate of this issue

Added subscriber: @ColinBarton

Added subscriber: @ColinBarton

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I can confirm the problem.
Introduced in 99436acde8

I can confirm the problem. Introduced in 99436acde8

This issue was referenced by blender/cycles@fe229bc91a

This issue was referenced by blender/cycles@fe229bc91ac356b4edfaa912186dfd4240537cd6

This issue was referenced by dc74d60915

This issue was referenced by dc74d60915e550d3e8b3665afc5435a1d752614b
Brecht Van Lommel was assigned by Dalai Felinto 2020-08-24 15:13:02 +02:00

Added subscriber: @IPv6

Added subscriber: @IPv6

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 2.90 milestone 2023-02-08 16:25:41 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#79819
No description provided.