Fix T79819: crash with OSL trace() and getmessage() after Embree changes

The return value of scene_intersect must be checked, the isect struct members
can't be assumed to be initialized if that returns false.

Differential Revision: https://developer.blender.org/D8692